feat: add updated version message in dashboard
